--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,11 +4,11 @@ project(hysteresis)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
 set(SOURCE_FILES
-    # src/hysteresis.cpp
-    # src/PythonCopy.cpp
-    src/Iter.cpp
-    src/Iter.h
-    # src/PythonCopy.h
+    src/hysteresis.cpp
+    src/PythonCopy.cpp
+    #src/Iter.cpp
+    #src/Iter.h
+    src/PythonCopy.h
     )
 
 add_executable(hysteresis ${SOURCE_FILES})
